--- a/YOG_ESSENTIALS.html
+++ b/YOG_ESSENTIALS.html
@@ -8,6 +8,7 @@
 		
 	</head>
 	<body style="background-color: #ffffcc;">
+	<div id="container">
 		<nav class="navbar">
 			<div class="navdiv">
 				<div class="logo">
@@ -49,6 +50,7 @@
     <footer>
         <center><p class="two" style="text-indent:10px;">&copy; 2024 Healthy Lifestyle. All rights reserved.</p></center>
     </footer>
-	<div>
+	</div>
+	</div>
 	</body>
 </html>
