--- a/blogs.html
+++ b/blogs.html
@@ -18,7 +18,7 @@
 					<h1>Blogs ~</h1>
 				</div>
 				<ul>
-					<li><a href="YOG_ESSENTIALS.html"><i class="fa fa-home"></i>Home</a></li>
+					<li><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
 					<li><a href="news.html"><i class="fa fa-newspaper-o"></i>News</a></li>
 					<li><a href="blogs.html"><i class="fa fa-pencil-square-o"></i>Blogs</a></li>
 					<li><a href="About_us.html"><i class="fa fa-user-circle-o"></i>About us</a></li>
@@ -48,7 +48,7 @@
 			</section>
 			<section>
 			<figure>
-			<img src="./assets/img/peace.png" alt="Yoga" width="500px" ><br>
+			<img src="./assets/img/peace.jpg" alt="Yoga" width="500px" ><br>
 			<figcaption><a href="https://jinaljadhav.medium.com/yoga-eternal-peace-5bc54cd2b9cb"><h2>Yoga: Eternal Peace</h2></a></figcaption>
 			</figure>
 			</section>
