--- a/contact_us.html
+++ b/contact_us.html
@@ -18,7 +18,7 @@
 					<h1>Contact Us ~</h1>
 				</div>
 				<ul>
-					<li><a href="YOG_ESSENTIALS.html"><i class="fa fa-home"></i>Home</a></li>
+					<li><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
 					<li><a href="news.html"><i class="fa fa-newspaper-o"></i>News</a></li>
 					<li><a href="blogs.html"><i class="fa fa-pencil-square-o"></i>Blogs</a></li>
 					<li><a href="About_us.html"><i class="fa fa-user-circle-o"></i>About us</a></li>
