--- a/contact_us.html
+++ b/contact_us.html
@@ -19,7 +19,7 @@
 				</div>
 				<ul>
 					<li><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
-					<li><a href="news.html"><i class="fa fa-newspaper-o"></i>News</a></li>
+					<li><a href="News.html"><i class="fa fa-newspaper-o"></i>News</a></li>
 					<li><a href="blogs.html"><i class="fa fa-pencil-square-o"></i>Blogs</a></li>
 					<li><a href="About_us.html"><i class="fa fa-user-circle-o"></i>About us</a></li>
 					<li><a href="contact_us.html"><i class="fa fa-phone"></i>Contact us</a></li>
