--- a/nutrition.html
+++ b/nutrition.html
@@ -16,7 +16,7 @@
 						<h2 style="align:center">NUTRITION ~</h2>
 					</div>
 					<ul>
-						<li><a href="YOG_ESSENTIALS.html"><i class="fa fa-home"></i>Home</a></li>
+						<li><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
 					</ul>
 				</div>
 			</nav>
