--- a/resources.html
+++ b/resources.html
@@ -15,7 +15,7 @@
 						<h2 style="align:center">Resources ~</h2>
 				</div>
 				<ul>
-					<li><a href="YOG_ESSENTIALS.html"><i class="fa fa-home"></i>Home</a></li>
+					<li><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
 				</ul>
 			</div>
 		</nav>
