--- a/yoga.html
+++ b/yoga.html
@@ -15,7 +15,7 @@
 						<h2 style="align:center">YOGA ~</h2>
 					</div>
 					<ul>
-						<li><a href="YOG_ESSENTIALS.html"><i class="fa fa-home"></i>Home</a></li>
+						<li><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
 					</ul>
 				</div>
 			</nav>
